gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whereami-grpc-route
  namespace: gog-frontend
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    sectionName: https
    name: external-http # Name of your GKE Gateway
    namespace: gog-gateway
    kind: Gateway
  #hostnames:
  #  - "gog.example" # replace with your hostname
  rules:
  - matches:
    - path:
        type: PathPrefix
        #value: / # Matches all methods of whereami.Whereami
        value: /whereami.Whereami    
    backendRefs:
    - name: whereami-grpc-frontend # Name of your Kubernetes Service for the gRPC backend
      port: 9090 # Port of your gRPC service
